--- a/astro/src/components/Footer.astro
+++ b/astro/src/components/Footer.astro
@@ -69,8 +69,8 @@ const social = [
     'print:hidden'
   )}
 >
-  <div class="container mx-auto flex flex-col md:flex-row">
-    <div class="w-full sm:w-2/3">
+  <div class="container mx-auto flex flex-col">
+    <div class="w-full">
       <h4 class="footer-title">About</h4>
       <p>
         Eli Gundry is a full stack web developer that loves JavaScript, devops
@@ -102,25 +102,27 @@ const social = [
         and thinks everyone can benefit from writing some HTML.
       </p>
     </div>
-    <div class="w-1/3">
+    <div class="w-full">
       <h4 class="footer-title">Social</h4>
-      <div class="flex flex-row gap-2">
+      <div
+        class={clsx([
+          'flex',
+          'flex-row',
+          'gap-2',
+          '[&>a]:tooltip',
+          '[&>a]:normal-case',
+          '[&>a]:inline-flex',
+          '[&>a]:w-8',
+        ])}
+      >
         {
           social.map((link) => (
             <a
               href={link.url}
-              class={clsx(
-                'btn',
-                'btn-sm',
-                'btn-square',
-                'btn-primary',
-                'tooltip',
-                'normal-case',
-                'inline-flex'
-              )}
               data-tip={link.label}
+              class={clsx(['btn', 'btn-sm', 'btn-square', 'btn-primary'])}
             >
-              <link.Icon size="1.75em" />
+              <link.Icon size="1.75rem" />
             </a>
           ))
         }
