--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -59,23 +59,22 @@ const shelves = {
       <li>
         I am a{' '}
         <EmojiText emoji="🧑‍💻" label="computer programmer emoji">
-          <strong>full stack web engineer</strong>
+          <strong>full stack web engineer</strong>.
         </EmojiText>
-        .
       </li>
       <li>
         I love to plan and{' '}
         <EmojiText emoji="👨‍🍳" label="chef emoji">
-          <strong>cook elaborate meals</strong>
+          <strong>cook elaborate meals</strong>.
         </EmojiText>
-        . It really activates the engineering part of my brain!
+        It really activates the engineering part of my brain!
       </li>
       <li>
         I have a{' '}
         <EmojiText emoji="🤓" label="geek emoji">
-          <strong>non-traditional computer science education</strong>
+          <strong>non-traditional computer science education</strong>.
         </EmojiText>
-        . I attended a vocational school in high school, taught myself web programming,
+        I attended a vocational school in high school, taught myself web programming,
         bounced around colleges for computer science while working the entire time
         before deciding to go pro!
       </li>
@@ -87,9 +86,9 @@ const shelves = {
       <li>
         I currently live in{' '}
         <EmojiText emoji="📍" label="pin emoji to denote location">
-          <strong>Astoria, Queens</strong>
+          <strong>Astoria, Queens</strong>.
         </EmojiText>
-        . I didn't think I would settle down in Queens and love it as much as I do,
+        I didn't think I would settle down in Queens and love it as much as I do,
         but life is like that sometimes.
       </li>
       <li>
@@ -102,9 +101,8 @@ const shelves = {
         </EmojiText>{' '}
         and I sorta have{' '}
         <a href="https://twitter.com/EliGundry/status/1055933062125703168">
-          a tattoo of him on my arm
-        </a>
-        .
+          a tattoo of him on my arm</a
+        >.
       </li>
     </ul>
   </section>
