--- a/astro/src/styles/tailwind.css
+++ b/astro/src/styles/tailwind.css
@@ -6,7 +6,18 @@
 
 @layer components {
   .paper {
-    @apply max-w-none mb-4 drop-shadow-xl print:drop-shadow-none bg-base-100/90 p-4 rounded-lg;
+    /* @apply max-w-none mb-4 drop-shadow-xl print:drop-shadow-none bg-base-100/90 p-4 rounded-lg; */
+    @apply max-w-none p-4;
+  }
+
+  .bookshelf {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    column-gap: 1vw;
+    margin: 0 1vw 1vw;
+    margin-left: 0;
+    text-align: center;
   }
 }
 
@@ -34,15 +45,5 @@
 
 .tooltip {
   cursor: default;
-  z-index: 10000000;
 }
 
-.bookshelf {
-  display: grid;
-  align-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  column-gap: 1vw;
-  margin: 0 1vw 1vw;
-  margin-left: 0;
-  text-align: center;
-}
