--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -30,6 +30,7 @@ const latestFeeling = await daylio.getLatest()
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content={Astro.generator} />
+    <link rel="canonical" href={config.url + Astro.url.pathname} />
     <link
       rel="alternate"
       type="application/rss+xml"
