--- a/next/components/Resume/index.module.scss
+++ b/next/components/Resume/index.module.scss
@@ -32,6 +32,7 @@
   & :global(.hackathons) {
     @media print, (min-width: theme('screens.md')) {
       columns: 2;
+      @apply text-sm;
     }
   }
 }
