Start updating resume

--- a/astro/src/components/Header.astro
+++ b/astro/src/components/Header.astro
@@ -47,7 +47,8 @@ const links = [
     'fixed',
     'top-0',
     'z-50',
-    'rounded-none'
+    'rounded-none',
+    'print:hidden'
   )}
   value="0"
   max="100"></progress>
@@ -61,7 +62,7 @@ const links = [
     'z-40',
     'sm:pr-8',
     'pl-4 md:pl-14',
-    'print-hidden',
+    'print:hidden',
     '[&_a]:hover:bg-transparent',
     '[&_a]:focus:bg-transparent',
     '[&_a]:hover:no-underline',
